# clothing_detection

./: CMakeLists.txt  README.md  package.xml
msg/: Box.msg  BoxArray.msg
src/: aux_node.py  clothing_detector_node.py  save_node.py
